# kumo-demo

./: .gitignore  README.md  agent.py  env.py  next.config.ts  package.json  pnpm-lock.yaml  process_data.py  prompts.py  pyproject.toml  queries.py  requirements.txt  server.py  vercel.json
app/: layout.tsx  page.tsx  providers.tsx
